@@ -1,7 +1,7 @@
-Writer2LaTeX version 1.1.1 (development release)
+Writer2LaTeX version 1.1.2 (development release)
 ================================================
 
-This is the distribution of Writer2LaTeX version 1.1.1
+This is the distribution of Writer2LaTeX version 1.1.2
 
 Latest version can be found at the web site
   http://writer2latex.sourceforge.net
@@ -14,5 +14,5 @@ Bugs and feature requests should be reported to
   henrikjust (at) openoffice.org
   
 
-September 2009
+April 2010
 Henrik Just
